remove code smell